--- a/app/src/main/res/layout/activity_detail_movies.xml
+++ b/app/src/main/res/layout/activity_detail_movies.xml
@@ -32,7 +32,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/relName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="13dp"
@@ -40,11 +40,11 @@
         android:text="Movie Name"
         android:textSize="16sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toTopOf="@+id/relOver"
         app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/textView4"
+        android:id="@+id/relOver"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="15dp"
@@ -71,7 +71,7 @@
             android:layout_marginStart="13dp"
             android:text="Release Date :"
             android:textStyle="bold"
-            app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
+            app:layout_constraintBaseline_toBaselineOf="@+id/relDate"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -86,7 +86,7 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/textView9"
+            android:id="@+id/relDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
@@ -96,13 +96,13 @@
             app:layout_constraintStart_toEndOf="@+id/textView7" />
 
         <TextView
-            android:id="@+id/textView10"
+            android:id="@+id/relRate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="17dp"
             android:text="7.6"
-            app:layout_constraintStart_toStartOf="@+id/textView9"
-            app:layout_constraintTop_toBottomOf="@+id/textView9" />
+            app:layout_constraintStart_toStartOf="@+id/relDate"
+            app:layout_constraintTop_toBottomOf="@+id/relDate" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
