--- a/app/src/main/res/layout/activity_list_movie.xml
+++ b/app/src/main/res/layout/activity_list_movie.xml
@@ -13,7 +13,7 @@
         android:layout_margin="@dimen/_10sdp"
         android:layout_marginTop="@dimen/_10sdp"
         android:layout_marginBottom="@dimen/_10sdp"
-        android:text="LIST MOVIE"
+        android:text="LIST MOVIES"
         android:textAlignment="center"
         android:textSize="@dimen/_20ssp"
         android:textStyle="bold"/>
